adding logout documentation
